--- a/view/properties_zotero.ui
+++ b/view/properties_zotero.ui
@@ -136,10 +136,13 @@
       <item>
        <widget class="QPushButton" name="pushButton_2">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>Сохранить</string>
+        </property>
+        <property name="checkable">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
